# scanner

./: .gitignore  README.md  pyproject.toml  run_server.sh  scanner.service
inference/: consumers.py  inference.py  routing.py  views.py
inference/model/: keras_model.h5  labels.txt
inference/static/inference/: index.js
inference/templates/inference/: index.html
model/: keras_model.h5  labels.txt
scanner/: manage.py
scanner/scanner/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
tests/: test_scanner.py
